--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-GB" class="scroll-smooth">
 <head>
@@ -82,7 +81,8 @@
 
         /* Glowing effect for icons (from File 1) */
         .icon-glow {
-            background: linear-gradient(135deg, #d4a574, #f4c791);
+            background: #1e293b; /* Changed from gold gradient */
+            border: 2px solid #d4a574; /* Added border */
             box-shadow: 0 0 20px rgba(212, 165, 116, 0.3);
             transition: all 0.3s ease;
         }
@@ -235,25 +235,50 @@
     <main>
 
         <!-- 1. Hero Section (Style from File 1, Content from File 2) -->
-        <section id="home" class="hero-bg relative text-white py-40 px-4 text-center overflow-hidden">
+        <section id="home" class="hero-bg relative text-white py-40 md:py-32 px-4 overflow-hidden"> <!-- Removed text-center, adjusted padding -->
             <div class="absolute inset-0 circuit-pattern opacity-50"></div>
-            <div class="relative z-5">
-                <span class="text-[#d4a574] font-semibold uppercase tracking-wider parallax" data-parallax-speed="-0.05">Protech Dynamic Solutions</span>
-                <h1 class="text-5xl md:text-7xl font-black my-6 hero-gradient-text parallax" data-parallax-speed="-0.2">
-                    Transforming Complexity into<br>Competitive Advantage
-                </h1>
-                <p class="text-xl md:text-2xl text-gray-300 mb-10 max-w-2xl mx-auto parallax" data-parallax-speed="-0.1">
-                    We build bespoke software, automate critical processes, and harness AI to drive your project management and business operations forward.
-                </p>
-                <div class="mt-10 flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="#services" class="btn-primary py-3 px-8 rounded-lg text-lg">
-                        Our Services
-                    </a>
-                    <a href="#contact" class="btn-secondary py-3 px-8 rounded-lg text-lg">
-                        Contact Us
-                    </a>
-                </div>
-            </div>
+            
+            <!-- Added container and grid -->
+            <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative z-5">
+                <div class="grid md:grid-cols-2 gap-12 items-center">
+                    
+                    <!-- Hero Text Column -->
+                    <div class="relative z-10 text-center md:text-left">
+                        <span class="text-[#d4a574] font-semibold uppercase tracking-wider parallax" data-parallax-speed="-0.05">Protech Dynamic Solutions</span>
+                        <h1 class="text-5xl md:text-7xl font-black my-6 hero-gradient-text parallax" data-parallax-speed="-0.2">
+                            Transforming Complexity into<br>Competitive Advantage
+                        </h1>
+                        <p class="text-xl md:text-2xl text-gray-300 mb-10 max-w-2xl mx-auto md:mx-0 parallax" data-parallax-speed="-0.1"> <!-- Added md:mx-0 -->
+                            We build bespoke software, automate critical processes, and harness AI to drive your project management and business operations forward.
+                        </p>
+                        <div class="mt-10 flex flex-col sm:flex-row gap-4 justify-center md:justify-start"> <!-- Added md:justify-start -->
+                            <a href="#services" class="btn-primary py-3 px-8 rounded-lg text-lg">
+                                Our Services
+                            </a>
+                            <a href="#contact" class="btn-secondary py-3 px-8 rounded-lg text-lg">
+                                Contact Us
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Hero Logo Column -->
+                    <div class="relative flex justify-center mt-12 md:mt-0 z-10">
+                        <!-- 
+                            *** YOUR LOGO HERE ***
+                            1. Upload your 'logo latest.jpg' to GitHub.
+                            2. Click on the file in GitHub.
+                            3. Click the 'Raw' button.
+                            4. Copy the URL from your browser's address bar.
+                            5. Replace the 'src' attribute below with that URL.
+                        -->
+                        <img src="https://placehold.co/500x500/1e293b/d4a574?text=Your+Logo+Here" 
+                             alt="Protech Dynamic Solutions Logo" 
+                             class="w-full max-w-xs sm:max-w-sm rounded-2xl shadow-2xl shadow-[#d4a574]/20 glass-card p-2"
+                             onerror="this.src='https://placehold.co/500x500/1e293b/d4a574?text=Logo+Not+Found'; this.onerror=null;">
+                    </div>
+
+                </div> <!-- Close grid -->
+            </div> <!-- Close container -->
         </section>
 
         <!-- 2. Services Section (Style from File 1, Content from File 2) -->
@@ -276,7 +301,7 @@
                     <div class="service-card glass-card rounded-2xl p-8 text-center shadow-2xl">
                         <div class="icon-glow w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6">
                             <!-- SVG Icon from File 2 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-slate-900" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-[#d4a574]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"> <!-- Changed text-slate-900 to text-[#d4a574] -->
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m6 0h-6m6 0v7m-6-7v7m6-7h6l-3 3h-3v-3z" />
                             </svg>
                         </div>
@@ -290,7 +315,7 @@
                     <div class="service-card glass-card rounded-2xl p-8 text-center shadow-2xl">
                         <div class="icon-glow w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6">
                             <!-- SVG Icon from File 2 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-slate-900" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-[#d4a574]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"> <!-- Changed text-slate-900 to text-[#d4a574] -->
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M12 5V3m0 18v-2M12 9v6m-3-3h6m-3-3a3 3 0 013 3v6a3 3 0 01-3 3h-6a3 3 0 01-3-3v-6a3 3 0 013-3h6z" />
                             </svg>
                         </div>
@@ -304,7 +329,7 @@
                     <div class="service-card glass-card rounded-2xl p-8 text-center shadow-2xl">
                         <div class="icon-glow w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6">
                             <!-- SVG Icon from File 2 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-slate-900" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-[#d4a574]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"> <!-- Changed text-slate-900 to text-[#d4a574] -->
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.096 2.572-1.065z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                             </svg>
@@ -319,7 +344,7 @@
                     <div class="service-card glass-card rounded-2xl p-8 text-center shadow-2xl">
                         <div class="icon-glow w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6">
                             <!-- SVG Icon from File 2 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-slate-900" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-[#d4a574]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"> <!-- Changed text-slate-900 to text-[#d4a574] -->
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 18h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
                             </svg>
                         </div>
@@ -333,7 +358,7 @@
                     <div class="service-card glass-card rounded-2xl p-8 text-center shadow-2xl">
                         <div class="icon-glow w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6">
                             <!-- SVG Icon from File 2 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-slate-900" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-[#d4a574]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"> <!-- Changed text-slate-900 to text-[#d4a574] -->
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 10h18M3 14h18m-9-4v8m-7 0h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z" />
                             </svg>
                         </div>
@@ -347,7 +372,7 @@
                     <div class="service-card glass-card rounded-2xl p-8 text-center shadow-2xl">
                         <div class="icon-glow w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6">
                             <!-- SVG Icon from File 2 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-slate-900" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-[#d4a574]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"> <!-- Changed text-slate-900 to text-[#d4a574] -->
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
                             </svg>
                         </div>
@@ -492,3 +517,4 @@
     </script>
 </body>
 </html>
+
