--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             4. Copy the URL from your browser's address bar.
                             5. Replace the 'src' attribute below with that URL.
                         -->
-                        <img src="https://placehold.co/500x500/1e293b/d4a574?text=Your+Logo+Here" 
+                        <img src="https://github.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/blob/main/logo%20latest.png?raw=true" 
                              alt="Protech Dynamic Solutions Logo" 
                              class="w-full max-w-xs sm:max-w-sm rounded-2xl shadow-2xl shadow-[#d4a574]/20 glass-card p-2"
                              onerror="this.src='https://placehold.co/500x500/1e293b/d4a574?text=Logo+Not+Found'; this.onerror=null;">
