--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="flex justify-between items-center h-16">
                 <!-- Logo / Brand Name (from File 2, styled with File 1's gold) -->
                 <a href="#home" class="flex-shrink-0 flex items-center">
-                    <span class="text-2xl font-extrabold text-white">Protech</span>
+                    <span class="text-2xl font-extrabold text-white">Protech Dynamic Solutions</span>
                     <span class="text-2xl font-bold text-[#d4a574]">.</span>
                 </a>
                 
