--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 Our 'Smarter, Not Harder' Approach
                             </h4>
                             <p class="text-slate-300 leading-relaxed text-center">
-                                We believe in being <strong>money-wise</strong> by default. Our methodology isn't about throwing complex tech at a problem; it's about using AI to find the <em>smartest</em> path to a financial return. We find the high-cost, repetitive tasks and automate them, letting your team focus on high-value work. It's not just digital transformation; it's financial optimization.
+                                We believe in being <strong>money-wise</strong> by default. Our methodology isn't about throwing complex tech at a problem; it's about using AI to find the <em>smartest</em> path to a financial return. We find the high-cost, repetitive tasks and automate them, letting your team focus on high-value work. It's not just digital transformation; it's financial optimisation.
                             </p>
                         </div>
                         <!-- [END] Methodology Text Block -->
