--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="flex justify-between items-center h-20">
                 <a href="#home" class="flex items-center gap-3 group">
                     <!-- FIXED Logo Path -->
-                    <img src="https://github.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/blob/main/logo%20latest.png?raw=true" alt="Protech Logo" class="h-12 w-12 object-contain transition-transform duration-300 group-hover:scale-110" onerror="this.onerror=null; this.src='https://placehold.co/48x48/0f172a/d4a574?text=PDS';">
+                    <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/logo%20latest%20P.png" alt="Protech Logo" class="h-12 w-12 object-contain transition-transform duration-300 group-hover:scale-110" onerror="this.onerror=null; this.src='https://placehold.co/48x48/0f172a/d4a574?text=PDS';">
                     <div class="flex items-baseline">
                         <span class="text-2xl font-extrabold text-white">Protech Dynamic Solutions</span>
                         <span class="text-2xl font-bold bg-gradient-to-r from-amber-400 to-yellow-300 bg-clip-text text-transparent">.</span>
