--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-amber-500/20 to-yellow-300/20 rounded-full blur-3xl"></div>
                             <!-- FIXED Logo Path -->
-                            <img src="https://github.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/blob/main/logo%20latest.png?raw=true" alt="Protech Logo" class="relative w-full max-w-md sm:max-w-lg rounded-2xl shadow-2xl transition-transform duration-500 hover:scale-105" onerror="this.onerror=null; this.src='https://placehold.co/448x448/1e293b/d4a574?text=PDS+Logo';">
+                            <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/ptk%20no%20bckrnd.png" alt="Protech Logo" class="relative w-full max-w-md sm:max-w-lg rounded-2xl shadow-2xl transition-transform duration-500 hover:scale-105" onerror="this.onerror=null; this.src='https://placehold.co/448x448/1e293b/d4a574?text=PDS+Logo';">
                         </div>
                     </div>
                 </div>
