--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Protech Dynamic Solutions - AI & Process Automation">
     <meta property="og:description" content="Bespoke software and AI solutions from Ireland's premium technology consultancy. Smarter automation, not harder work.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/logo%20latest.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%202.png">
     <meta property="og:url" content="https://protechdynamicsolutions.github.io">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Protech Dynamic Solutions - AI & Process Automation">
     <meta name="twitter:description" content="Transform complexity into competitive advantage with bespoke AI and automation solutions.">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/logo%20latest.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%202.png">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/logo%20latest%20P.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%202.png">
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Google Fonts: Inter and Playfair Display -->
@@ -399,8 +399,8 @@
         <nav class="container mx-auto px-4 sm:px-6 lg:px-12" role="navigation" aria-label="Main navigation">
             <div class="flex justify-between items-center h-24">
                 <a href="#home" class="logo-container group" aria-label="Protech Dynamic Solutions - Home">
-                    <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/logo%20latest%20P.png" alt="Protech Dynamic Solutions Logo" class="logo-p logo-img object-contain group-hover:scale-110" loading="eager" onerror="this.src='https://placehold.co/48x48/000/a855f7?text=P';">
-                    <img src="https://github.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/blob/main/logo%20latest.png?raw=true" alt="Protech Dynamic Solutions - Premium AI and Automation Consultancy" class="logo-full logo-img object-contain group-hover:scale-105" loading="eager" onerror="this.src='https::placehold.co/280x64/000/a855f7?text=Protech+Dynamic+Solutions';">
+                    <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%202.png" alt="Protech Dynamic Solutions Logo" class="logo-p logo-img object-contain group-hover:scale-110" loading="eager" onerror="this.src='https://placehold.co/48x48/000/a855f7?text=P';">
+                    <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%202.png" alt="Protech Dynamic Solutions - Premium AI and Automation Consultancy" class="logo-full logo-img object-contain group-hover:scale-105" loading="eager" onerror="this.src='https::placehold.co/280x64/000/a855f7?text=Protech+Dynamic+Solutions';">
                 </a>
                 <div class="hidden md:flex md:items-center md:space-x-10">
                     <a href="#home" class="text-gray-300 hover:text-transparent hover:bg-gradient-to-r hover:from-amber-400 hover:to-yellow-300 hover:bg-clip-text transition-all font-semibold text-sm tracking-wide" aria-label="Navigate to home section">HOME</a>
@@ -456,7 +456,7 @@
                     <div class="relative flex justify-center float-animation">
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-purple-500/20 to-violet-300/20 rounded-full blur-3xl" aria-hidden="true"></div>
-                            <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/ptk%20no%20bckrnd.png" alt="Protech Dynamic Solutions - Advanced technology and automation visualization" class="relative w-full max-w-lg rounded-2xl transition-transform duration-700 hover:scale-105 magnetic-hover" loading="lazy" onerror="this.src='https::placehold.co/512x512/1a1410/d4a574?text=PDS';">
+                            <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%202.png" alt="Protech Dynamic Solutions - Advanced technology and automation visualization" class="relative w-full max-w-lg rounded-2xl transition-transform duration-700 hover:scale-105 magnetic-hover" loading="lazy" onerror="this.src='https::placehold.co/512x512/1a1410/d4a574?text=PDS';">
                         </div>
                     </div>
                 </div>
@@ -602,7 +602,7 @@
         <div class="absolute top-0 left-1/2 w-full h-1 bg-gradient-to-r from-transparent via-amber-400/30 to-transparent -translate-x-1/2" aria-hidden="true"></div>
         <div class="container mx-auto px-4 sm:px-6 lg:px-12 py-16 text-center">
             <div class="flex justify-center mb-8">
-                <img src="https://github.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/blob/main/logo%20latest.png?raw=true" alt="Protech Dynamic Solutions Logo" class="h-20 w-auto object-contain opacity-70 hover:opacity-100 transition-opacity" loading="lazy" onerror="this.src='https::placehold.co/200x80/000/a855f7?text=Protech';">
+                <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%202.png" alt="Protech Dynamic Solutions Logo" class="h-20 w-auto object-contain opacity-70 hover:opacity-100 transition-opacity" loading="lazy" onerror="this.src='https::placehold.co/200x80/000/a855f7?text=Protech';">
             </div>
             <p class="text-gray-500 text-lg font-semibold mb-4">&copy; 2025 Protech Dynamic Solutions. All rights reserved.</p>
             <p class="text-base luxury-gold-text font-medium">Bespoke Software & AI Solutions | Ireland</p>
