--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="flex justify-between items-center h-24">
                 <a href="#home" class="logo-container group" aria-label="Protech Dynamic Solutions - Home">
                     <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%203.png" alt="Protech Dynamic Solutions Logo" class="logo-p logo-img object-contain group-hover:scale-110" loading="eager" onerror="this.src='https://placehold.co/48x48/000/a855f7?text=P';">
-                    <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%203.png" alt="Protech Dynamic Solutions - Premium AI and Automation Consultancy" class="logo-full logo-img object-contain group-hover:scale-105" loading="eager" onerror="this.src='https::placehold.co/280x64/000/a855f7?text=Protech+Dynamic+Solutions';">
+                    <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/logo%20latest%20P.png" alt="Protech Dynamic Solutions - Premium AI and Automation Consultancy" class="logo-full logo-img object-contain group-hover:scale-105" loading="eager" onerror="this.src='https::placehold.co/280x64/000/a855f7?text=Protech+Dynamic+Solutions';">
                 </a>
                 <div class="hidden md:flex md:items-center md:space-x-10">
                     <a href="#home" class="text-gray-300 hover:text-transparent hover:bg-gradient-to-r hover:from-amber-400 hover:to-yellow-300 hover:bg-clip-text transition-all font-semibold text-sm tracking-wide" aria-label="Navigate to home section">HOME</a>
