--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
         <div class="absolute top-0 left-1/2 w-full h-1 bg-gradient-to-r from-transparent via-amber-400/30 to-transparent -translate-x-1/2" aria-hidden="true"></div>
         <div class="container mx-auto px-4 sm:px-6 lg:px-12 py-16 text-center">
             <div class="flex justify-center mb-8">
-                <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%203.png" alt="Protech Dynamic Solutions Logo" class="h-20 w-auto object-contain opacity-70 hover:opacity-100 transition-opacity" loading="lazy" onerror="this.src='https::placehold.co/200x80/000/a855f7?text=Protech';">
+                <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/logo%20latest%20P.png" alt="Protech Dynamic Solutions Logo" class="h-20 w-auto object-contain opacity-70 hover:opacity-100 transition-opacity" loading="lazy" onerror="this.src='https::placehold.co/200x80/000/a855f7?text=Protech';">
             </div>
             <p class="text-gray-500 text-lg font-semibold mb-4">&copy; 2025 Protech Dynamic Solutions. All rights reserved.</p>
             <p class="text-base luxury-gold-text font-medium">Bespoke Software & AI Solutions | Ireland</p>
