--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Protech Dynamic Solutions - AI & Process Automation">
     <meta property="og:description" content="Bespoke software and AI solutions from Ireland's premium technology consultancy. Smarter automation, not harder work.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%203.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20bk%204.png">
     <meta property="og:url" content="https://protechdynamicsolutions.github.io">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Protech Dynamic Solutions - AI & Process Automation">
     <meta name="twitter:description" content="Transform complexity into competitive advantage with bespoke AI and automation solutions.">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%203.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20bk%204.png">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%203.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20bk%204.png">
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Google Fonts: Inter and Playfair Display -->
@@ -456,7 +456,7 @@
                     <div class="relative flex justify-center float-animation">
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-purple-500/20 to-violet-300/20 rounded-full blur-3xl" aria-hidden="true"></div>
-                            <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20background%203.png" alt="Protech Dynamic Solutions - Advanced technology and automation visualization" class="relative w-full max-w-lg rounded-2xl transition-transform duration-700 hover:scale-105 magnetic-hover" loading="lazy" onerror="this.src='https::placehold.co/512x512/1a1410/d4a574?text=PDS';">
+                            <img src="https://raw.githubusercontent.com/ProtechDynamicSolutions/ProtechDynamicSolutions.github.io/refs/heads/main/Protech%20no%20bk%204.png" alt="Protech Dynamic Solutions - Advanced technology and automation visualization" class="relative w-full max-w-lg rounded-2xl transition-transform duration-700 hover:scale-105 magnetic-hover" loading="lazy" onerror="this.src='https::placehold.co/512x512/1a1410/d4a574?text=PDS';">
                         </div>
                     </div>
                 </div>
