--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                             </p>
                             <div class="mt-8 p-6 bg-black/40 rounded-xl border border-amber-400/20">
                                 <p class="text-amber-300 text-center font-semibold mb-2">Real Result:</p>
-                                <p class="text-gray-300 text-center">One client saved <span class="text-amber-400 font-bold">€45,000 annually</span> by automating invoice processing that previously required 15 hours per week of manual data entry.</p>
+                                <p class="text-gray-300 text-center">One client <span class="text-amber-400 font-bold">freed up 15 hours of staff time weekly</span> by automating invoice processing that previously required manual data entry, allowing the team to focus on higher-value tasks.</p>
                             </div>
                         </div>
                     </div>
