--- a/Teeth/Index.html
+++ b/Teeth/Index.html
@@ -78,7 +78,7 @@ const USERS = {
     accent: '#FFD700', 
     iconChar: 'M',
     Graphic: InfiniteAchillesIcon,
-    beyName: 'Infinite Achilles' 
+    beyName: 'Blue Diamond' 
   },
   ARI: { 
     id: 'ari', 
