--- a/Teeth/index.html
+++ b/Teeth/index.html
@@ -75,11 +75,9 @@
         const appId = 'teeth2-3f73e';
 
         // --- Icons ---
-        const StarIcon = ({ className }) => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/></svg>);
         const TrophyIcon = ({ className }) => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"/><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"/><path d="M4 22h16"/><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"/><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"/><path d="M18 2H6v7a6 6 0 0 0 12 0V2Z"/></svg>);
         const ZapIcon = ({ className, fill = "none" }) => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill={fill} stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>);
         const XIcon = ({ className }) => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>);
-        const EditIcon = ({ className }) => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>);
         const DownloadIcon = ({ className }) => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" x2="12" y1="15" y2="3"/></svg>);
         const CloudIcon = ({ className }) => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M17.5 19a5.5 5.5 0 0 0 5.5-5.5c0-3.04-2.46-5.5-5.5-5.5-.32 0-.64.03-.96.08a8 8 0 1 0-14.54 4.04"/><path d="M12 12v9"/><path d="m15 18-3 3-3-3"/></svg>);
         const DiscIcon = ({ className }) => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><circle cx="12" cy="12" r="10"/><circle cx="12" cy="12" r="3"/></svg>);
@@ -124,7 +122,6 @@
             const [db, setDb] = useState(null);
             const [logs, setLogs] = useState({});
             const [currentUser, setCurrentUser] = useState(null);
-            const [adminMode, setAdminMode] = useState(false);
             const [celebration, setCelebration] = useState(null);
             const [showThursdayPopup, setShowThursdayPopup] = useState(false);
             const [showReward, setShowReward] = useState(false);
@@ -165,7 +162,6 @@
             // --- 2. Cloud Data Link ---
             useEffect(() => {
                 if (!db || !user) return;
-                // Correct Path: artifacts -> appId -> public -> data -> battle_logs -> global_doc
                 const docRef = db.doc(`artifacts/${appId}/public/data/battle_logs/global_doc`);
 
                 const unsub = docRef.onSnapshot(snap => {
@@ -217,7 +213,6 @@
 
             return (
                 <div className="min-h-screen relative overflow-x-hidden p-4 md:p-8">
-                    {/* Background Tech Grid */}
                     <div className="fixed inset-0 pointer-events-none opacity-20" style={{backgroundImage: 'linear-gradient(#334155 1px, transparent 1px), linear-gradient(90deg, #334155 1px, transparent 1px)', backgroundSize: '40px 40px'}}></div>
                     
                     {celebration && (
@@ -328,31 +323,29 @@
                                         return (
                                             <div key={i} className="flex flex-col items-center gap-1">
                                                 <span className="text-[8px] uppercase font-bold text-gray-600">{d.toLocaleDateString('en-GB', { weekday: 'narrow' })}</span>
-                                                <div onClick={() => adminMode && toggleBrush(currentUser.id, d, 'am')} className={`w-full aspect-square rounded border ${comp ? 'bg-blue-600/50 border-blue-400 shadow-[0_0_8px_rgba(59,130,246,0.5)]' : 'bg-black/30 border-white/5'} flex items-center justify-center overflow-hidden`}>
+                                                <div 
+                                                    onClick={() => toggleBrush(currentUser.id, d, 'am')} 
+                                                    className={`w-full aspect-square rounded border transition-all cursor-pointer ${comp ? 'bg-blue-600/50 border-blue-400 shadow-[0_0_8px_rgba(59,130,246,0.5)]' : 'bg-black/30 border-white/5'} flex items-center justify-center overflow-hidden active:scale-90`}
+                                                >
                                                     {comp && <DayGraphic className="w-full h-full p-0.5" spinning={true} />}
                                                 </div>
                                             </div>
                                         );
                                     })}
                                 </div>
+                                <p className="text-[8px] text-gray-600 mt-4 text-center uppercase tracking-widest">Tap a day above to manually adjust battle status</p>
                             </div>
                         </div>
                     )}
 
                     <footer className="fixed bottom-0 left-0 w-full p-4 flex justify-center pointer-events-none z-50">
-                        <div className={`pointer-events-auto flex items-center gap-4 px-6 py-2 transition-all backdrop-blur-md ${adminMode ? 'bg-red-600/90 text-white shadow-2xl' : 'bg-black/40 text-gray-500 translate-y-1/2 hover:translate-y-0'}`}>
-                            {adminMode && (
-                                <button onClick={() => {
-                                    let csv = "Date,Blader,Time Slot,Result\n";
-                                    Object.keys(logs).sort().forEach(k => { if (logs[k]) { const [u, d, s] = k.split('-'); csv += `${d},${USERS[u.toUpperCase()].name},${s.toUpperCase()},Burst\n`; } });
-                                    const l = document.createElement("a"); l.href = encodeURI("data:text/csv;charset=utf-8," + csv); l.download = "battle_logs.csv"; l.click();
-                                }} className="flex items-center gap-2 border-r border-red-400 pr-4 hover:text-yellow-300 uppercase text-[9px] font-black tracking-widest">
-                                    <DownloadIcon className="w-3 h-3" /> Export
-                                </button>
-                            )}
-                            <button onClick={() => setAdminMode(!adminMode)} className="flex items-center gap-2 text-[9px] font-black uppercase tracking-widest">
-                                {adminMode ? <XIcon className="w-3 h-3" /> : <EditIcon className="w-3 h-3" />}
-                                {adminMode ? 'Exit Referee' : 'WBBA Referee'}
+                        <div className="pointer-events-auto">
+                            <button onClick={() => {
+                                let csv = "Date,Blader,Time Slot,Result\n";
+                                Object.keys(logs).sort().forEach(k => { if (logs[k]) { const [u, d, s] = k.split('-'); csv += `${d},${USERS[u.toUpperCase()]?.name || u},${s.toUpperCase()},Burst\n`; } });
+                                const l = document.createElement("a"); l.href = encodeURI("data:text/csv;charset=utf-8," + csv); l.download = "battle_logs.csv"; l.click();
+                            }} className="flex items-center gap-2 px-6 py-2 bg-black/40 backdrop-blur-md text-gray-400 border border-white/10 hover:text-yellow-300 transition-all uppercase text-[9px] font-black tracking-widest shadow-xl">
+                                <DownloadIcon className="w-3 h-3" /> Export Battle Data
                             </button>
                         </div>
                     </footer>
@@ -365,4 +358,6 @@
     </script>
 </body>
 </html>
+
+
 
