--- a/Chores/index.html
+++ b/Chores/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div id="debug" class="debug-panel">Status: Waking the Elves...</div>
+    <div id="debug" class="debug-panel">Status: Running...</div>
     <div id="root"></div>
 
     <script type="module">
