--- a/Chores/index.html
+++ b/Chores/index.html
@@ -64,7 +64,7 @@
             CheckCircle2, Circle, Fish, Sword, Shield, Zap, Clock, Calendar, 
             Coins, Trophy, Pizza, Bomb, PiggyBank, ChevronRight, Target, 
             Sparkles, TreePine, Gift, Flame, Star, Heart, Rocket, Swords, Hexagon,
-            Dog, Bone, Droplets, Stethoscope, ArrowRight, Timer, Box, Layout
+            Dog, Bone, Droplets, Stethoscope, ArrowRight, Timer, Box, Layout, Utensils
         } from 'https://esm.sh/lucide-react@0.284.0';
 
         const firebaseConfig = {
@@ -259,6 +259,17 @@
                 save(updates);
             };
 
+            const clearTable = (who) => {
+                playSound('complete');
+                const updates = {};
+                if (who === 'Max') updates.maxVault = { ...maxVault, total: maxVault.total + 0.25 };
+                else updates.ariVault = { ...ariVault, total: ariVault.total + 0.25 };
+                save(updates);
+                // Particle burst for clearing table
+                const p = Array.from({ length: 8 }, (_, i) => ({ id: Date.now() + i, x: 50 + (Math.random() - 0.5) * 40, y: 50 + (Math.random() - 0.5) * 40, size: 15, emoji: '🍽️' }));
+                setParticles(p); setTimeout(() => setParticles([]), 1500);
+            };
+
             const getLastFedLabel = (ts) => {
                 if (!ts) return '';
                 const date = new Date(ts);
@@ -354,40 +365,59 @@
 
                 React.createElement('section', { className: "bg-blue-900/20 border-4 border-blue-400/40 rounded-[3rem] p-8 shadow-2xl mb-12 relative overflow-hidden" },
                     React.createElement('h2', { className: "text-2xl font-black mb-8 flex items-center gap-3 text-blue-100 uppercase tracking-wider" }, 
-                        React.createElement(Fish, { className: "text-blue-400 animate-float" }), "Creature Comforts"
+                        React.createElement(Sparkles, { className: "text-blue-400 animate-float" }), "Daily Duties"
                     ),
-                    React.createElement('div', { className: "grid grid-cols-1 md:grid-cols-3 gap-6" },
-                        React.createElement('div', { className: "bg-black/40 rounded-[2rem] p-6 border-2 border-blue-500/30 backdrop-blur-sm" },
-                            React.createElement('div', { className: "flex justify-between items-start mb-4" },
-                                React.createElement('div', { className: "text-xl font-black text-blue-200" }, "The Fish"),
-                                React.createElement('div', { className: `text-[10px] font-black uppercase px-2 py-1 rounded ${isFishFedToday ? 'bg-green-500' : 'bg-red-500 animate-pulse'}` }, isFishFedToday ? 'Fed' : 'Hungry!')
+                    React.createElement('div', { className: "grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6" },
+                        React.createElement('div', { className: "bg-black/40 rounded-[2rem] p-6 border-2 border-blue-500/30 backdrop-blur-sm flex flex-col justify-between" },
+                            React.createElement('div', null,
+                                React.createElement('div', { className: "flex justify-between items-start mb-4" },
+                                    React.createElement('div', { className: "text-xl font-black text-blue-200" }, "The Fish"),
+                                    React.createElement('div', { className: `text-[10px] font-black uppercase px-2 py-1 rounded ${isFishFedToday ? 'bg-green-500' : 'bg-red-500 animate-pulse'}` }, isFishFedToday ? 'Fed' : 'Hungry!')
+                                ),
+                                isFishFedToday && React.createElement('p', { className: "text-[10px] text-green-400 font-mono font-bold mb-4" }, getLastFedLabel(fishState.lastFed))
                             ),
-                            isFishFedToday && React.createElement('p', { className: "text-[10px] text-green-400 font-mono font-bold mb-4" }, getLastFedLabel(fishState.lastFed)),
                             React.createElement('div', { className: "flex gap-2" },
                                 React.createElement('button', { disabled: isFishFedToday, onClick: () => feedFish('Max'), className: "flex-1 bg-purple-700 disabled:opacity-30 py-2 rounded-xl text-[10px] font-black uppercase" }, "+50c Max"),
                                 React.createElement('button', { disabled: isFishFedToday, onClick: () => feedFish('Ari'), className: "flex-1 bg-orange-700 disabled:opacity-30 py-2 rounded-xl text-[10px] font-black uppercase" }, "+50c Ari")
                             )
                         ),
-                        React.createElement('div', { className: "bg-black/40 rounded-[2rem] p-6 border-2 border-slate-700 backdrop-blur-sm" },
-                            React.createElement('div', { className: "flex justify-between items-start mb-4" },
-                                React.createElement('div', { className: "text-xl font-black text-slate-200" }, "Monty"),
-                                React.createElement('div', { className: "text-[10px] font-black uppercase bg-slate-700 px-2 py-1 rounded" }, `${dogState.monty}/2 Fed`)
+                        React.createElement('div', { className: "bg-black/40 rounded-[2rem] p-6 border-2 border-slate-700 backdrop-blur-sm flex flex-col justify-between" },
+                            React.createElement('div', null,
+                                React.createElement('div', { className: "flex justify-between items-start mb-4" },
+                                    React.createElement('div', { className: "text-xl font-black text-slate-200" }, "Monty"),
+                                    React.createElement('div', { className: "text-[10px] font-black uppercase bg-slate-700 px-2 py-1 rounded" }, `${dogState.monty}/2 Fed`)
+                                ),
+                                dogState.montyLastFed > 0 && React.createElement('p', { className: "text-[10px] text-green-400 font-mono font-bold mb-4" }, getLastFedLabel(dogState.montyLastFed))
                             ),
-                            dogState.montyLastFed > 0 && React.createElement('p', { className: "text-[10px] text-green-400 font-mono font-bold mb-4" }, getLastFedLabel(dogState.montyLastFed)),
                             React.createElement('div', { className: "flex gap-2" },
                                 React.createElement('button', { disabled: dogState.monty >= 2, onClick: () => feedDog('Monty', 'Max'), className: "flex-1 bg-purple-700 disabled:opacity-30 py-2 rounded-xl text-[10px] font-black uppercase" }, "+50c Max"),
                                 React.createElement('button', { disabled: dogState.monty >= 2, onClick: () => feedDog('Monty', 'Ari'), className: "flex-1 bg-orange-700 disabled:opacity-30 py-2 rounded-xl text-[10px] font-black uppercase" }, "+50c Ari")
                             )
                         ),
-                        React.createElement('div', { className: "bg-black/40 rounded-[2rem] p-6 border-2 border-slate-700 backdrop-blur-sm" },
-                            React.createElement('div', { className: "flex justify-between items-start mb-4" },
-                                React.createElement('div', { className: "text-xl font-black text-slate-200" }, "Liath"),
-                                React.createElement('div', { className: "text-[10px] font-black uppercase bg-slate-700 px-2 py-1 rounded" }, `${dogState.liath}/2 Fed`)
+                        React.createElement('div', { className: "bg-black/40 rounded-[2rem] p-6 border-2 border-slate-700 backdrop-blur-sm flex flex-col justify-between" },
+                            React.createElement('div', null,
+                                React.createElement('div', { className: "flex justify-between items-start mb-4" },
+                                    React.createElement('div', { className: "text-xl font-black text-slate-200" }, "Liath"),
+                                    React.createElement('div', { className: "text-[10px] font-black uppercase bg-slate-700 px-2 py-1 rounded" }, `${dogState.liath}/2 Fed`)
+                                ),
+                                dogState.liathLastFed > 0 && React.createElement('p', { className: "text-[10px] text-green-400 font-mono font-bold mb-4" }, getLastFedLabel(dogState.liathLastFed))
                             ),
-                            dogState.liathLastFed > 0 && React.createElement('p', { className: "text-[10px] text-green-400 font-mono font-bold mb-4" }, getLastFedLabel(dogState.liathLastFed)),
                             React.createElement('div', { className: "flex gap-2" },
                                 React.createElement('button', { disabled: dogState.liath >= 2, onClick: () => feedDog('Liath', 'Max'), className: "flex-1 bg-purple-700 disabled:opacity-30 py-2 rounded-xl text-[10px] font-black uppercase" }, "+50c Max"),
                                 React.createElement('button', { disabled: dogState.liath >= 2, onClick: () => feedDog('Liath', 'Ari'), className: "flex-1 bg-orange-700 disabled:opacity-30 py-2 rounded-xl text-[10px] font-black uppercase" }, "+50c Ari")
+                            )
+                        ),
+                        React.createElement('div', { className: "bg-emerald-900/40 rounded-[2rem] p-6 border-2 border-emerald-500/50 backdrop-blur-sm flex flex-col justify-between" },
+                            React.createElement('div', null,
+                                React.createElement('div', { className: "flex justify-between items-start mb-4" },
+                                    React.createElement('div', { className: "text-xl font-black text-emerald-200 flex items-center gap-2" }, React.createElement(Utensils, { size: 18 }), "Clear Table"),
+                                    React.createElement('div', { className: "text-[10px] font-black uppercase bg-emerald-700 px-2 py-1 rounded" }, "Anytime!")
+                                ),
+                                React.createElement('p', { className: "text-[10px] text-emerald-400 font-bold mb-4 uppercase tracking-wider" }, "Help tidy after meals")
+                            ),
+                            React.createElement('div', { className: "flex gap-2" },
+                                React.createElement('button', { onClick: () => clearTable('Max'), className: "flex-1 bg-purple-700 hover:bg-purple-600 py-2 rounded-xl text-[10px] font-black uppercase transition-colors" }, "+25c Max"),
+                                React.createElement('button', { onClick: () => clearTable('Ari'), className: "flex-1 bg-orange-700 hover:bg-orange-600 py-2 rounded-xl text-[10px] font-black uppercase transition-colors" }, "+25c Ari")
                             )
                         )
                     )
