--- a/Chores/index.html
+++ b/Chores/index.html
@@ -40,7 +40,7 @@
     <div id="loader">
         <div class="text-center p-8">
             <div id="loader-spinner" class="inline-block animate-spin rounded-full h-16 w-16 border-t-4 border-b-4 border-yellow-400 mb-6"></div>
-            <div id="loader-text" class="text-yellow-400 font-black tracking-widest uppercase text-xl animate-pulse">Summoning Elves...</div>
+            <div id="loader-text" class="text-yellow-400 font-black tracking-widest uppercase text-xl animate-pulse">Initialising...</div>
         </div>
     </div>
 
